  to work correctly for p5-/py-/ruby- ports (i.e. PKGNAMEPREFIX is not empty).
  This fixes both detection of ORIG_DIR and Synopsis field generation for such
  ports (PR: ports/70156, Cheng-Lung Sung)
- bugfix: port create: use author's name and e-mail address from ~/.porttools
  when creating a new port (PR: ports/70300, Janos Mohacsi)
- bugfix: port submit: avoid CC'ing PRs with maintainership changes to
  previous maintainer if the port was unmaintained - i.e. when MAINTAINER
  is set to ports@FreeBSD.org (PR: ports/94055, Diane Bruce)

0.75, 2006-05-01
- new: port commit: commit the port to FreeBSD CVS repository
- new: port getpr: extract contents of a PR from FreeBSD GNATS database
- new: port install: install the port
- new: port upgrade: upgrade the port

0.63, 2004-08-07
- new: port test: add NO_DEPENDS=yes to the port test flags to prevent
  installation of dependencies into the temporary PREFIX dir
- change: port test: optimize shared library dependency search algorithm
  by only searching for files listed in the package's plist
- new: port test: if 'make package' phase fails (most often because of
  stale files listed in pkg-plist which are no longer installed) display
  a list currently installed in the PREFIX before cleaning up
- cosmetique: change man pages to my FreeBSD.org e-mail address
- cosmetique: change copyright in README for year 2004
- cosmetique: modify output of help command, fix wrapping
- cosmetique: port submit: shorten SUMMARY line to fit in 80 columns

0.62, 2004-07-29
- bugfix: port test: fix logic to generate an unique PREFIX
- bugfix: port test: DTRT when LOCALBASE == X11BASE
- change: port test: take additional precautions to prevent deleting
  PREFIX if PREFIX == LOCALBASE

0.61, 2004-07-29
- bugfix: port test: fix a typo - unclosed double quote
- change: LICENSE: update copyright for year 2004

0.60, 2004-07-29
- add: port submit: new option: -c (committer check): adds "-c" to portlint(1)