@@ -178,7 +178,7 @@ do
 done
 
 # Check for extra files left
-echo "===> Extra files check"
+echo "===> Extra files and directories check"
 if [ -d ${PREFIX} -a "${USE_X_PREFIX}" != "yes" ]
 then
 	# Remove PREFIX from the extra files list
@@ -186,6 +186,9 @@ then
 	find ${PREFIX} ! -type d | \
 		egrep -v "${PREFIX}/share/nls/(POSIX|en_US.US-ASCII)"  | \
 		sed -e "s,^${PREFIX}/,,"
+	sudo find ${LOCALBASE}/ -type d | sed "s,^${LOCALBASE}/,," | sort > ${PREFIX}.PLIST_DIRS.before
+	sudo find ${PREFIX}/ -type d | sed "s,^${PREFIX}/,," | sort > ${PREFIX}.PLIST_DIRS.after
+	comm -13 ${PREFIX}.PLIST_DIRS.before ${PREFIX}.PLIST_DIRS.after | sort -r | awk '{print "@dirrmtry "$1}'
 fi
 
 # Finish with a clean workspace
@@ -196,7 +199,7 @@ then
 	if [ "${USE_X_PREFIX}" != "yes" -a -d ${PREFIX} ] 
 	then
 		echo "===>  Removing existing ${PREFIX} dir"
- 		[ "${PREFIX}" != "${LOCALBASE}" ] && sudo rm -rf ${PREFIX}
+ 		[ "${PREFIX}" != "${LOCALBASE}" ] && sudo rm -rf ${PREFIX} ${PREFIX}.PLIST_DIRS.before ${PREFIX}.PLIST_DIRS.after
 	fi
 	sudo rm -rf ${PKG_DBDIR}
 fi
