@@ -5,6 +5,9 @@
   ports (PR: ports/70156, Cheng-Lung Sung)
 - bugfix: port create: use author's name and e-mail address from ~/.porttools
   when creating a new port (PR: ports/70300, Janos Mohacsi)
+- bugfix: port test: integrate patch from the ports tree: add detection
+  of leftover directories in addition to leftover files (PR: ports/71363,
+  Yen-Ming Lee)
 - bugfix: port submit: avoid CC'ing PRs with maintainership changes to
   previous maintainer if the port was unmaintained - i.e. when MAINTAINER
   is set to ports@FreeBSD.org (PR: ports/94055, Diane Bruce)
